--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -5,6 +5,7 @@
   <title>Pokédex</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
